Header alignment fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -209,24 +209,156 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
    HEADER
    =============================== */
 
+
+.bk-header {
+    background-color: transparent;
+    border-bottom: 1px solid darken(@color-swatch2,10%);
+    padding-bottom: 33px;
+    .wrapper {
+    padding: 20px 0;
+
+
+    // Flex parent
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-direction: normal;
+    -moz-box-direction: normal;
+    -webkit-box-orient: horizontal;
+    -moz-box-orient: horizontal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-box-pack: justify;
+    -moz-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-align-content: flex-start;
+    -ms-flex-line-pack: start;
+    align-content: flex-start;
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+
+      @media @tablet {
+        display: block;
+      }
+
+    .companyheader {
+      // Flex child
+       -webkit-box-ordinal-group: 1;
+      -moz-box-ordinal-group: 1;
+      -webkit-order: 0;
+      -ms-flex-order: 0;
+      order: 0;
+      -webkit-box-flex: 0;
+      -moz-box-flex: 0;
+      -webkit-flex: 0 1 auto;
+      -ms-flex: 0 1 auto;
+      flex: 0 1 auto;
+      -webkit-align-self: auto;
+      -ms-flex-item-align: auto;
+      align-self: auto;
+
+      // Flex parent
+      display: -webkit-box;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-direction: normal;
+      -moz-box-direction: normal;
+      -webkit-box-orient: horizontal;
+      -moz-box-orient: horizontal;
+      -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+      flex-direction: row;
+      -webkit-flex-wrap: nowrap;
+      -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+      -webkit-box-pack: justify;
+      -moz-box-pack: justify;
+      -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+      justify-content: space-between;
+      -webkit-align-content: flex-start;
+      -ms-flex-line-pack: start;
+      align-content: flex-start;
+      -webkit-box-align: center;
+      -moz-box-align: center;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center;
+
+      @media @mobile {
+        display: block;
+      }
+
+      @media @tablet {
+        padding-right: 50px;
+      }
+
+      .widget.companyname {
+        -webkit-box-ordinal-group: 1;
+        -moz-box-ordinal-group: 1;
+        -webkit-order: 0;
+        -ms-flex-order: 0;
+        order: 0;
+        -webkit-box-flex: 1;
+        -moz-box-flex: 1;
+        -webkit-flex: 1 1 auto;
+        -ms-flex: 1 1 auto;
+        flex: 1 1 auto;
+        -webkit-align-self: auto;
+        -ms-flex-item-align: auto;
+        align-self: auto;
+      }
+    }
+    .extendednavigation {
+      // Flex child
+      -webkit-box-ordinal-group: 1;
+      -moz-box-ordinal-group: 1;
+      -webkit-order: 0;
+      -ms-flex-order: 0;
+      order: 0;
+      -webkit-box-flex: 1;
+      -moz-box-flex: 1;
+      -webkit-flex: 1 1 auto;
+      -ms-flex: 1 1 auto;
+      flex: 1 1 auto;
+      -webkit-align-self: auto;
+      -ms-flex-item-align: auto;
+      align-self: auto;
+    }
+  }
+}
+
+
+
+
+
 .bk-header {
   padding: 0;
   background-color: @color-swatch7;
 }
 
 .companyheader {
-  display: block;
-  float: left;
-  padding: 20px 0px 18px;
-  width: 25%;
+  
 }
 
 /* COMPANY NAME */
 
 .widget.companyname {
-  display: block;
-  float: left;
-  margin-top: 8px;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .widget.companyname a {
@@ -246,9 +378,12 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 /* LOGO */
 
 .widget.logo {
-  display: block;
-  float: left;
+  display: inline-block;
+  vertical-align: middle;
   margin-right: 10px;
+  .logo, img {
+    line-height: 0;
+  }
 }
 
 /* ===============================
@@ -283,10 +418,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
    =============================== */
 
 .widget.extendednavigation {
-  float: right;
   position: relative;
-  width: 75%;
-  margin: 20px 0;
 }
 
 .widget.extendednavigation a.pull {
@@ -302,6 +434,11 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
   float: left;
   display: block;
   border: none;
+  &.selected {
+    .text {
+      color: @color-swatch2;
+    }
+  }
 }
 
 .widget.extendednavigation ul li a, .widget.extendednavigation ul li.folder .text {
@@ -1622,7 +1759,6 @@ hr.line.align-right {
     .widget .extendednavigation ul {
         width: 100%;
         display: none;
-        border-top: 1px solid lighten(@color-swatch5,15%);
         padding: 20px 0; 
     }
 
@@ -1643,7 +1779,7 @@ hr.line.align-right {
         display: block!important;
         width: 100%;
         border: 1px solid lighten(@color-swatch3,35%);
-        margin: 14px 0 0 0;
+        margin: 0 0 0 0;
     }
 
     .widget.extendednavigation ul li:hover > ul li {
